--- a/docnote/App.xaml
+++ b/docnote/App.xaml
@@ -21,6 +21,8 @@
 
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedTabControl.xaml" />
 
+                <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro.Resources;component/Icons.xaml" />-->
+
                 <ResourceDictionary>
                     <!--Global View Model Locator-->
                     <vm:ViewModelLocator x:Key="Locator"
