--- a/docnote/View/PatientWindow.xaml
+++ b/docnote/View/PatientWindow.xaml
@@ -56,8 +56,8 @@
         <Label Grid.Row="3" >Дата народження</Label>
         <Label Content="Телефон" Grid.Row="4" />
         <Label Content="Інформація про батків" Grid.Row="5"/>
-        <TextBox Text="{Binding Patient.FirstName}" Controls:TextBoxHelper.Watermark="Прізвище" Grid.Column="1"/>
-        <TextBox Text="{Binding Patient.LastName}" Controls:TextBoxHelper.Watermark="Ім'я" Grid.Column="1" Grid.Row="1"/>
+        <TextBox Text="{Binding Patient.LastName}" Controls:TextBoxHelper.Watermark="Прізвище" Grid.Column="1"/>
+        <TextBox Text="{Binding Patient.FirstName}" Controls:TextBoxHelper.Watermark="Ім'я" Grid.Column="1" Grid.Row="1"/>
         <TextBox Text="{Binding Patient.MiddleName}" Controls:TextBoxHelper.Watermark="По Батькові" Grid.Row="1" Grid.Column="3" />
         <DatePicker Grid.Column="1" Grid.Row="3" Text="{Binding Patient.BirthDate, StringFormat=d}" />
         <TextBox Text="{Binding Patient.PhoneNumber}" Controls:TextBoxHelper.Watermark="Номер мобільного телефону" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" />
