--- a/docnote/View/CardEntryWindow.xaml
+++ b/docnote/View/CardEntryWindow.xaml
@@ -22,7 +22,11 @@
         </Grid.RowDefinitions>
         <Label Content="Дата запису" />
         <Label Grid.Column="1" HorizontalContentAlignment="Left" Content="{Binding CardEntry.CreationDate, StringFormat={}{0:dd MMMM yyyy / hh:mm}}"/>
-        <TextBox Grid.Row="1" Grid.ColumnSpan="2" TextWrapping="Wrap" Text="{Binding CardEntry.EntryText}"></TextBox>
+        <TextBox Grid.Row="1" Grid.ColumnSpan="2" 
+                 TextWrapping="Wrap" 
+                 VerticalScrollBarVisibility="Auto"
+                 AcceptsReturn="True" 
+                 Text="{Binding CardEntry.EntryText}"></TextBox>
         <Button Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="12" Content="Зберегти" Margin="0,10" Command="{Binding SaveCardEntryClickCommand}"/>
     </Grid>
 </Controls:MetroWindow>
