--- a/docnote/View/DoctorWindow.xaml
+++ b/docnote/View/DoctorWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:resources="clr-namespace:docnote.Resources"
         xmlns:local="clr-namespace:docnote.View"
         mc:Ignorable="d"
         Title="Доктор" 
@@ -42,16 +44,43 @@
         <Label VerticalAlignment="Center" Margin="5,10,5,5">Прізвище</Label>
         <Label VerticalAlignment="Center" Margin="5" Grid.Row="1" >Ім'я</Label>
         <Label VerticalAlignment="Center" Margin="5" Grid.Row="2" >По-батькові</Label>
-        <TextBox Text="{Binding Doctor.FirstName}" VerticalContentAlignment="Center" Margin="0,10,5,5" Controls:TextBoxHelper.Watermark="Прізвище" Grid.Column="1" />
-        <TextBox Text="{Binding Doctor.LastName}" VerticalContentAlignment="Center" Margin="0,5,5,5" Controls:TextBoxHelper.Watermark="Ім'я" Grid.Column="1" Grid.Row="1" />
-        <TextBox Text="{Binding Doctor.MiddleName}" VerticalContentAlignment="Center" Margin="0,5,5,5" Controls:TextBoxHelper.Watermark="По-батькові" Grid.Column="1" Grid.Row="2" />
+        <TextBox Text="{Binding Doctor.FirstName}" VerticalContentAlignment="Center" Margin="0,10,5,5" Grid.Column="1" >
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
+        <TextBox Text="{Binding Doctor.LastName}" VerticalContentAlignment="Center" Margin="0,5,5,5" Grid.Column="1" Grid.Row="1" >
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
+        <TextBox Text="{Binding Doctor.MiddleName}" VerticalContentAlignment="Center" Margin="0,5,5,5" Grid.Column="1" Grid.Row="2" >
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
 
         <Label VerticalContentAlignment="Center" Margin="5" Content="Посада" Grid.Row="3"/>
         <Label VerticalContentAlignment="Center" Margin="5" Content="Місце роботи" Grid.Row="4" />
         <Label VerticalContentAlignment="Center" Margin="5" Content="Телефон" Grid.Row="5" />
-        <TextBox Text="{Binding Doctor.Rank}" VerticalContentAlignment="Center" Margin="0,5,5,5" Controls:TextBoxHelper.Watermark="Посада" Grid.Column="1" Grid.Row="3"  />
-        <TextBox Text="{Binding Doctor.JobPlace}" VerticalContentAlignment="Center" Margin="0,5,5,5" Controls:TextBoxHelper.Watermark="Місце роботи" Grid.Column="1" Grid.Row="4" />
-        <TextBox Text="{Binding Doctor.PhoneNumber}" VerticalContentAlignment="Center" Margin="0,5,5,5" Grid.Column="1" Grid.Row="5" />
+        <TextBox Text="{Binding Doctor.Rank}" VerticalContentAlignment="Center" Margin="0,5,5,5" Grid.Column="1" Grid.Row="3"  >
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
+        <TextBox Text="{Binding Doctor.JobPlace}" VerticalContentAlignment="Center" Margin="0,5,5,5" Grid.Column="1" Grid.Row="4" >
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
+        <TextBox Style="{StaticResource Validate}" 
+                 MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Doctor.PhoneNumber'}"
+                 Text="{Binding Path=Doctor.PhoneNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
+                 VerticalContentAlignment="Center" Margin="0,5,5,5" Grid.Column="1" Grid.Row="5" >
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
         <Button Command="{Binding Path=DoctorSaveClickCommand}" x:Name="button" Content="Зберегти" HorizontalAlignment="Left" Margin="38,42,0,0" Grid.Row="6" VerticalAlignment="Top" Width="74"/>
         <!--<TextBox Text="{Binding Doctor.MobileNumber}" VerticalContentAlignment="Center" Margin="0,5,5,5" Controls:TextBoxHelper.Watermark="Номер мобільного телефону" Grid.Column="1" Grid.Row="5" />-->
     </Grid>
