--- a/docnote/View/PatientWindow.xaml
+++ b/docnote/View/PatientWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:local="clr-namespace:docnote.View"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:resources="clr-namespace:docnote.Resources"
         mc:Ignorable="d"
         Title="Пацієнт"
@@ -56,12 +57,47 @@
         <Label Grid.Row="3" >Дата народження</Label>
         <Label Content="Телефон" Grid.Row="4" />
         <Label Content="Інформація про батків" Grid.Row="5"/>
-        <TextBox Text="{Binding Patient.LastName}" Controls:TextBoxHelper.Watermark="Прізвище" Grid.Column="1"/>
-        <TextBox Text="{Binding Patient.FirstName}" Controls:TextBoxHelper.Watermark="Ім'я" Grid.Column="1" Grid.Row="1"/>
-        <TextBox Text="{Binding Patient.MiddleName}" Controls:TextBoxHelper.Watermark="По Батькові" Grid.Row="1" Grid.Column="3" />
+        <TextBox Style="{StaticResource Validate}" 
+                 MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.LastName'}"
+                 Text="{Binding Path=Patient.LastName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
+                 Grid.Column="1">
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
+        <TextBox Grid.Column="1" Grid.Row="1"
+                 Style="{StaticResource Validate}" 
+                 MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.FirstName'}"
+                 Text="{Binding Path=Patient.FirstName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
+        <TextBox Grid.Row="1" Grid.Column="3" 
+                 Style="{StaticResource Validate}" 
+                 MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.MiddleName'}"
+                 Text="{Binding Path=Patient.MiddleName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
         <DatePicker Grid.Column="1" Grid.Row="3" Text="{Binding Patient.BirthDate, StringFormat=d}" />
-        <TextBox Text="{Binding Patient.PhoneNumber}" Controls:TextBoxHelper.Watermark="Номер мобільного телефону" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" />
-        <TextBox Text="{Binding Patient.ParentName}" Controls:TextBoxHelper.Watermark="ПІБ батків" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" />
+        <TextBox Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" 
+                 Style="{StaticResource Validate}" 
+                 MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.PhoneNumber'}"
+                 Text="{Binding Path=Patient.PhoneNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
+        <TextBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" 
+                 Style="{StaticResource Validate}" 
+                 MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.ParentName'}"
+                 Text="{Binding Path=Patient.ParentName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
 
         <Expander Grid.Row="6" Grid.ColumnSpan="4">
             <Grid>
@@ -82,8 +118,22 @@
                 </Grid.RowDefinitions>
                 <Label>Старе прізвище</Label>
                 <Label Grid.Row="1" >Ідентифікаійний код</Label>
-                <TextBox Text="{Binding Patient.ExLastName}" Controls:TextBoxHelper.Watermark="Старе прізвище" Grid.Column="1" />
-                <TextBox Text="{Binding Patient.IdentificationCode}" Controls:TextBoxHelper.Watermark="Ідентифікаійний код" Grid.Column="1" Grid.Row="1" />
+                <TextBox Grid.Column="1" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.ExLastName'}"
+                         Text="{Binding Path=Patient.ExLastName, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBox Grid.Column="1" Grid.Row="1" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.IdentificationCode'}"
+                         Text="{Binding Path=Patient.IdentificationCode, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
 
                 <StackPanel Orientation="Horizontal" Grid.Column="2" >
 
@@ -99,19 +149,82 @@
                 <Label Content="Дата реєстрації" Grid.Row="5" />
                 <Label Content="Дата зняття з реєстрації" Grid.Row="5" Grid.Column="2"/>
                 <Label Content="Причина зняття з реєстрації" Grid.Row="6" />
-                <TextBox Text="{Binding Patient.ParentPhoneNumber}" Controls:TextBoxHelper.Watermark="Телефон батьків" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" />
-                <TextBox Text="{Binding Patient.JobSchoolPlace}" Controls:TextBoxHelper.Watermark="Місце навчання / роботи" Grid.Row="3" Grid.Column="1" />
-                <TextBox Text="{Binding Patient.JobSchoolPnoneNumber}" Controls:TextBoxHelper.Watermark="Телефон закладу" Grid.Row="3" Grid.Column="3" />
-                <TextBox Text="{Binding Patient.Profession}" Controls:TextBoxHelper.Watermark="Професія" Grid.Row="4" Grid.Column="1" />
-                <TextBox Text="{Binding Patient.Position}" Controls:TextBoxHelper.Watermark="Посада" Grid.Row="4" Grid.Column="3" />
-                <TextBox Text="{Binding Patient.RegistrationDate}" Controls:TextBoxHelper.Watermark="Дата реєстрації" Grid.Row="5" Grid.Column="1" />
-                <TextBox Text="{Binding Patient.UnregistrationDate}" Controls:TextBoxHelper.Watermark="Дата зняття з реєстрації" Grid.Row="5" Grid.Column="3" />
-                <TextBox Text="{Binding Patient.UnregistrationReason}" Controls:TextBoxHelper.Watermark="Причина зняття з реєстрації" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="3"/>
+                <TextBox Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.ParentPhoneNumber'}"
+                         Text="{Binding Path=Patient.ParentPhoneNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBox Grid.Row="3" Grid.Column="1" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.JobSchoolPlace'}"
+                         Text="{Binding Path=Patient.JobSchoolPlace, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBox Grid.Row="3" Grid.Column="3" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.JobSchoolPnoneNumber'}"
+                         Text="{Binding Path=Patient.JobSchoolPnoneNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBox Grid.Row="4" Grid.Column="1" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.Profession'}"
+                         Text="{Binding Path=Patient.Profession, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBox Grid.Row="4" Grid.Column="3" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.Position'}"
+                         Text="{Binding Path=Patient.Position, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBox Grid.Row="5" Grid.Column="1" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.RegistrationDate'}"
+                         Text="{Binding Path=Patient.RegistrationDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBox Grid.Row="5" Grid.Column="3" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.UnregistrationDate'}"
+                         Text="{Binding Path=Patient.UnregistrationDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
+                <TextBox Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="3" 
+                         Style="{StaticResource Validate}" 
+                         MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.UnregistrationReason'}"
+                         Text="{Binding Path=Patient.UnregistrationReason, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                    <i:Interaction.Behaviors>
+                        <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+                    </i:Interaction.Behaviors>
+                </TextBox>
             </Grid>
         </Expander>
         <Label Content="Назва / Код карти" Grid.Row="7"  />
         <!--<Label Content="Остання дата оновлення" Grid.Row="7" Grid.Column="2" />-->
-        <TextBox Text="{Binding Card.CardNameCode}" Controls:TextBoxHelper.Watermark="Код карти" Grid.Row="7" Grid.Column="1" />
+        <TextBox Grid.Row="7" Grid.Column="1" 
+                 Style="{StaticResource Validate}" 
+                 MaxLength="{Binding Converter={StaticResource LengthConverter}, ConverterParameter='Patient.CardNameCode'}"
+                 Text="{Binding Path=Patient.CardNameCode, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+            <i:Interaction.Behaviors>
+                <resources:SelectAllTextBoxBehavior></resources:SelectAllTextBoxBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
         <!--<TextBox Text="{Binding Card.LastUpdateDate}" Controls:TextBoxHelper.Watermark="дата оновлення" Grid.Row="7" Grid.Column="3" />-->
 
         <StackPanel Grid.Row="8" Grid.ColumnSpan="2" Orientation="Horizontal">
