--- a/docnote/App.xaml
+++ b/docnote/App.xaml
@@ -31,12 +31,14 @@
 
                     <resources:LengthConverter x:Key="LengthConverter" />
 
+                    <resources:BoolInverterConverter x:Key="BoolInverterConverter" />
+
                     <Style x:Key="Validate" TargetType="{x:Type TextBox}">
                         <Style.Triggers>
                             <Trigger Property="Validation.HasError" Value="True">
                                 <Setter Property="ToolTip"
-                            Value="{Binding RelativeSource={RelativeSource Self},
-                                            Path=(Validation.Errors)[0].ErrorContent}" />
+                                    Value="{Binding RelativeSource={RelativeSource Self},
+                                    Path=(Validation.Errors)[0].ErrorContent}" />
                                 <Setter Property="Foreground" Value="Red" />
                             </Trigger>
                         </Style.Triggers>
