--- a/docnote/View/CardEntryWindow.xaml
+++ b/docnote/View/CardEntryWindow.xaml
@@ -21,12 +21,13 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Label Content="Дата запису" />
-        <Label Grid.Column="1" HorizontalContentAlignment="Left" Content="{Binding CardEntry.CreationDate}" ContentStringFormat="dd/MM/yyyy hh:mm"/>
+        <Label Grid.Column="1" HorizontalContentAlignment="Left" Content="{Binding CardEntry.CreationDate}" ContentStringFormat="dd/MM/yyyy HH:mm"/>
         <TextBox Grid.Row="1" Grid.ColumnSpan="2" 
                  TextWrapping="Wrap" 
                  VerticalScrollBarVisibility="Auto"
                  AcceptsReturn="True" 
                  Text="{Binding CardEntry.EntryText}"></TextBox>
-        <Button Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="12" Content="Зберегти" Margin="0,10" Command="{Binding SaveCardEntryClickCommand}"/>
+        <Button Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="12" Content="Зберегти і закрити" Margin="0,10" Command="{Binding SaveAndCloseCardEntryClickCommand}"/>
+        <Button Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="12" Content="Закрити" Margin="10,10,534,0" Command="{Binding CloseCardEntryClickCommand}" Grid.Column="1"/>
     </Grid>
 </Controls:MetroWindow>
